--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1,122 +1,122 @@
 {
   "extName": {
-    "message": "Download Manager",
-    "description": "Extension name"
+    "message": "İndirme Yöneticisi",
+    "description": "Uzantı adı"
   },
   "extDesc": {
-   "message": "Easy to manage downloaded files",
-   "description": "Extension description"
+   "message": "İndirilen dosyaları kolayca yönetin",
+   "description": "Uzantı açıklaması"
   },
   "settingsTitle": {
-    "message": "Settings",
-    "description": "Personal settings"
+    "message": "Ayarlar",
+    "description": "Kişisel ayarlar"
   },
   "aboutTitle": {
-    "message": "About",
-    "description": "Some information about the plugin"
+    "message": "Hakkında",
+    "description": "Eklenti hakkında bazı bilgiler"
   },
   "second": {
-    "message": "{} seconds left",
-    "description": "remaining time display"
+    "message": "{} saniye kaldı",
+    "description": "kalan süre göstergesi"
   },
   "minute": {
-    "message": "{} minutes left",
-    "description": "remaining time display"
+    "message": "{} dakika kaldı",
+    "description": "kalan süre göstergesi"
   },
   "hour": {
-    "message": "{} hours left",
-    "description": "remaining time display"
+    "message": "{} saat kaldı",
+    "description": "kalan süre göstergesi"
   },
   "day": {
-    "message": "{} days left",
-    "description": "remaining time display"
+    "message": "{} gün kaldı",
+    "description": "kalan süre göstergesi"
   },
   "closeTooltip": {
-    "message": "stop showing text prompt box",
-    "description": "on the download management page, when the mouse is moved over the button, the text prompt box stops showing"
+    "message": "metin komut kutusu göstermeyi durdur",
+    "description": "indirme yönetimi sayfasında, fare düğmenin üzerine getirildiğinde, metin komut kutusu gösterilmeyecek"
   },
   "newDownload": {
-    "message": "new download",
-    "description": "new download"
+    "message": "yeni indirme",
+    "description": "yeni indirme"
   },
   "newDownloadPlaceholder": {
-    "message": "Please enter the download link! Press Enter to download file",
-    "description": "Please enter the download link"
+    "message": "Lütfen indirme linkini girin! Dosyayı indirmek için Enter'a basın",
+    "description": "Lütfen indirme linkini girin"
   },
   "clearAll": {
-    "message": "clear list",
-    "description": "Clear button dropdown menu"
+    "message": "listeyi temizle",
+    "description": "Temizle düğmesi açılır menüsü"
   },
   "deleteAll": {
-    "message": "delete all from disk",
-    "description": "Clear button dropdown menu"
+    "message": "hepsini diskten sil",
+    "description": "Temizle düğmesi açılır menüsü"
   },
   "clearFailed": {
-    "message": "clear failed tasks",
-    "description": "Clear button dropdown menu"
+    "message": "başarısız görevleri sil",
+    "description": "Temizle düğmesi açılır menüsü"
   },
   "clearAbsent": {
-    "message": "clear absent tasks",
-    "description": "Clear button dropdown menu"
+    "message": "bulunmayan görevleri sil",
+    "description": "Temizle düğmesi açılır menüsü"
   },
   "openDownloadFolder": {
-    "message": "open download folder",
-    "description": "open the download folder in Explorer"
+    "message": "indirme klasörünü aç",
+    "description": "indirme klasörünü Explorer'da aç"
   },
   "openSettings": {
-    "message": "plugin settings",
-    "description": "open plugin settings in a new tab"
+    "message": "eklenti ayarları",
+    "description": "eklenti ayarlarını bir yeni sekmede aç"
   },
   "openHome": {
-    "message": "Open downloads page",
-    "description": "Open the browser's default download page in a new tab"
+    "message": "İndirilenler sayfasını aç",
+    "description": "Tarayıcının varsayılan indirme sayfasını bir yeni sekmede aç"
   },
   "openFileInFolder": {
-    "message": "open folder",
-    "description": "open file in folder"
+    "message": "klasörü aç",
+    "description": "klasördeki dosyayı aç"
   },
   "openFile": {
-    "message": "Open file",
-    "description": "open file"
+    "message": "Dosyayı aç",
+    "description": "dosya aç"
   },
   "pause": {
-    "message": "pause",
-    "description": "pause download"
+    "message": "duraklat",
+    "description": "indirmeyi duraklat"
   },
   "resume": {
-    "message": "resume download",
-    "description": "resume downloading a suspended file"
+    "message": "indirmeye devam et",
+    "description": "askıya alınan bir dosya inmeye devam ediyor"
   },
   "delete": {
-    "message": "delete from disk",
-    "description": "delete file from disk"
+    "message": "diskten sil",
+    "description": "diskten sil"
   },
   "retry": {
-    "message": "retry",
-    "description": "download again"
+    "message": "tekrar dene",
+    "description": "tekrar indir"
   },
   "dangerDescription": {
-    "message": "The file may harm your pc",
-    "description": "The file may harm your computer"
+    "message": "bu dosya bilgisayarınıza zarar verebilir",
+    "description": "Bu dosya bilgisayarınıza zarar verebilir"
   },
   "cancel": {
-    "message": "discard",
-    "description": "Cancel download of dangerous files"
+    "message": "vazgeç",
+    "description": "Tehlikeli dosyaların indirilmesini iptal et"
   },
   "reserve": {
-    "message": "keep",
-    "description": "Keep dangerous files"
+    "message": "sakla",
+    "description": "Tehlikeli dosyaları sakla"
   },
   "erase": {
-    "message": "remove from list",
-    "description": "cancel download or clear file from list"
+    "message": "listeden çıkar",
+    "description": "indirmeyi iptal et veya listeden çıkar"
   },
   "copied": {
-    "message": "copied",
-    "description": "copied to clipboard"
+    "message": "kopyalandı",
+    "description": "panoya kopyalandı"
   },
   "prefixMenus": {
-    "message": "Download the ",
+    "message": " İndir",
     "description": "context download prefix menus display"
   },
   "link": {
